# fwh_anthropic

./: CLAUDE.md  README.md  pyproject.toml
agent-spec/: integration-areas.agent-spec.yaml
src/anthropic_handlers/: __init__.py  catalog.py  catalog.yaml
src/anthropic_handlers/ffl/: agent_sdk.ffl  anthropic.ffl  batch.ffl  claude_code.ffl  composition.ffl  computer_use.ffl  files.ffl  messages.ffl
src/anthropic_handlers/handlers/: __init__.py
src/anthropic_handlers/handlers/agent_sdk/: __init__.py  agent_sdk_handlers.py
src/anthropic_handlers/handlers/batch/: __init__.py  batch_handlers.py
src/anthropic_handlers/handlers/claude_code/: __init__.py  claude_code_handlers.py
src/anthropic_handlers/handlers/computer_use/: __init__.py  computer_use_handlers.py
src/anthropic_handlers/handlers/files/: __init__.py  files_handlers.py
src/anthropic_handlers/handlers/messages/: __init__.py  messages_handlers.py
src/anthropic_handlers/handlers/shared/: __init__.py  anthropic_utils.py
src/anthropic_handlers/tools/: README.md  __init__.py  count-tokens.sh  count_tokens.py  create-message-with-file.sh  create-message-with-images.sh  create-message-with-tools.sh  create-message.sh  create_message.py  create_message_with_file.py  create_message_with_images.py  create_message_with_tools.py  delete-file.sh  delete_file.py  get-batch-results.sh  get-batch-status.sh  get_batch_results.py  get_batch_status.py  list-areas.sh  list-files.sh  list_areas.py  list_files.py  run-agent.sh  run-batch.sh  run-claude-code.sh  run-computer-use.sh  run_agent.py  run_batch.py  run_claude_code.py  run_computer_use.py  stream-message.sh  stream_message.py  submit-batch.sh  submit_batch.py  upload-file.sh  upload_file.py
src/anthropic_handlers/tools/_lib/: __init__.py  agent_sdk.py  areas.py  batch.py  claude_code.py  client.py  computer_use.py  files.py  messages.py
tests/: conftest.py  test_agent_sdk.py  test_batch.py  test_catalog_manifest.py  test_claude_code.py  test_composition.py  test_computer_use.py  test_files.py  test_messages.py  test_messages_streaming.py  test_messages_tool_use.py  test_messages_vision_and_caching.py
tests/live/: README.md  test_batch_live.py  test_composition_live.py  test_files_live.py  test_messages_live.py
